feat: add confirm popup
fix: event.path is undefined on Firefox

--- a/projects/demo-app/src/app/app.component.html
+++ b/projects/demo-app/src/app/app.component.html
@@ -15,3 +15,6 @@
 <p-megaMenu psdMegaMenu [model]="megaItems"></p-megaMenu>
 
 <p-menubar psdMenuBar [model]="menuBarItems"></p-menubar>
+
+<p-confirmPopup psdConfirmPopup></p-confirmPopup>
+<button (click)="confirm($event)" pButton icon="pi pi-check" label="Confirm"></button>
