--- a/projects/demo-app/src/styles.scss
+++ b/projects/demo-app/src/styles.scss
@@ -2,3 +2,6 @@
 @import "~primeicons/primeicons.css";
 @import "~primeng/resources/themes/saga-blue/theme.css";
 @import "~primeng/resources/primeng.min.css";
+
+@import "~quill/dist/quill.core.css";
+@import "~quill/dist/quill.snow.css";
