feat: add support for paginator

--- a/projects/demo-app/src/app/app.component.html
+++ b/projects/demo-app/src/app/app.component.html
@@ -57,3 +57,5 @@
 
 <h5>Single</h5>
 <p-treeSelect psdTreeSelect [options]="node1" placeholder="Select Item"></p-treeSelect>
+
+<p-paginator psdPaginator [rows]="10" [totalRecords]="120" [rowsPerPageOptions]="[10,20,30]"></p-paginator>
