fix: readd calendar.ts

--- a/projects/example/src/app/app.component.html
+++ b/projects/example/src/app/app.component.html
@@ -35,7 +35,7 @@
 
   <div>
     <div class="mb-2">Calendar</div>
-    <p-calendar pTooltip="Hello World"></p-calendar>
+    <p-calendar psdCalendar pTooltip="Hello World"></p-calendar>
   </div>
 
   <div>
